# Project_1.App_for_analysis_of_banking_operations

./: .env_template  .flake8  README.md  config.py  main.py  pyproject.toml
data/: operations.xlsx
htmlcov/: index.html
src/: logger.py  main.py  reports.py  services.py  utils.py  views.py  wiews.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py
